force-app/main/default/objects/Speaker_Communication_History__c/Speaker_Communication_History__c.object-meta.xml
<CustomObject>
    <label>Speaker Communication History</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Speaker Communication History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Communication History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>