force-app/main/default/objects/Speaker_Communication_History__c/fields/Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date__c</fullName>
    <label>Contact Date</label>
    <type>DateTime</type>
</CustomField>