force-app/main/default/objects/Speaker_Communication_History__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Speaker Communication Histories</relationshipLabel>
    <relationshipName>Speaker_Communication_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>